--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode local",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
@@ -11,6 +11,7 @@
     "axios": "^0.21.1",
     "core-js": "^3.10.1",
     "date-fns": "^2.21.1",
+    "firebase": "^8.4.1",
     "localbase": "^0.7.4",
     "regenerator-runtime": "^0.13.7",
     "vue": "^2.6.11",
