--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "firebase": "^8.4.1",
     "localbase": "^0.7.4",
     "regenerator-runtime": "^0.13.7",
+    "slugify": "^1.5.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuedraggable": "^2.24.3",
